Code review changes and test improvements.